<resources>
    <string name="str_openimg">open picture </string>
    <string name="str_scan">scanning equipment</string>
    <string name="str_printword">Print </string>
    <string name="str_printword_desc">Print GBK, Unicode text encoding</string>
    <string name="str_printimg">print pictures</string>
    <string name="str_printimg_desc">Select the picture to print</string>
    <string name="str_printbarcode">one-dimensional code printing </string>
    <string name="str_printbarcode_desc">dynamically create a dimensional code printing </string>
    <string name="str_printqrcode">two-dimensional code printing </string>
    <string name="str_printqrcode_desc">dynamically create 2D code printing </string>
    <string name="str_printcmd">send printer instructions </string>
    <string name="str_printcmd_desc">send a print instruction set other instructions </string>
    <string name="str_device">device</string>
    <string name="str_scaning">scanning</string>
    <string name="str_unconnected">not connected!</string>
    <string name="str_lose">connection lost!</string>
    <string name="str_cannotcreatebar">failed to create a one-dimensional code </string>
    <string name="str_connected">connected </string>
    <string name="str_disconnected">not connected to </string>
    <string name="str_connecting">connecting to </string>
    <string name="str_scanover">scanning is finished!</string>
    <string name="mode_bt">BT Printer</string>
    <string name="str_printtext">str_printtext</string>
    <string name="str_exit">Sure exit and close the equipment?</string>
    <string name="str_autoprint">Auto Print</string>
    <string name="str_printer_state">STATE</string>
    <string name="str_printer_lowpower">Low power</string>
    <string name="str_printer_nopaper">No paper</string>
    <string name="str_printer_bufferfull">Buffer full</string>
    <string name="str_printer_buffernull">Buffer null</string>
    <string name="str_printer_hightemperature">High temperature</string>
    <string name="str_custom_instruction">Instruction</string>
    <string name="button_send_instruction">Send</string>
    <string name="language">Language</string>
    <string name="accessories">Accessories</string>
    <string name="arabic">عربي</string>
    <string name="english">English</string>
    <string name="bluetooth_printer">Bluetooth printer</string>
    <string name="usb_printer">USB printer</string>
    <string name="S1000_printer">S1000 printer</string>
    <string name="S1000_card_swipe">S1000 magnetic card swipe</string>
    <string name="tap_her_to_add_new_card">Tap her to add new card</string>
    <string name="enter_card_name">Enter card name</string>
    <string name="card_name">Card Name</string>
    <string name="enter_card_pan">Enter card PAN</string>
    <string name="card_pan">Card PAN 19 or 16 digits</string>
    <string name="enter_card_expiry_date">Enter card expiry date(YYMM)</string>
    <string name="enter_card_pin">Enter card IPIN</string>
    <string name="card_expiry_date">Card Expiry Date</string>
    <string name="select_color_title">Select color or a card</string>
    <string name="select_card_color">Select Card Color</string>
    <string name="save">Save</string>
    <string name="card_pin">IPIN</string>
    <string name="inquiry">Inquiry</string>
    <string name="clear_form">Clear Form</string>
    <string name="have_otp">Have OTP</string>
    <string name="use_ne_of_saved_cards"> Use one of saved cards</string>
    <string name="phone_number">Phone</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="generate">Generate</string>
    <string name="have_not_otp">Haven\'t OTP</string>
    <string name="phone_ipin">IPIN</string>
    <string name="confirm_ipin">Confirm IPIN</string>
    <string name="otp">OTP</string>
    <string name="generate_ipin">Generate IPIN</string>
    <string name="generate_otp_hint">A verification code will be sent to your phone number, use it to generate internet PIN (iPIN).</string>
    <string name="generate_ipin_hint">Enter verification you received on your phone number on OTP field to generate internet PIN (iPIN).</string>
    <string name="service_provider">Service provider</string>
    <string name="amount">Amount</string>
    <string name="title_top_up">Top Up</string>
    <string name="title_bill_payment">Bill Payment</string>
    <string name="title_bill_iquery">Bill Inquery</string>
    <string name="title_generate_voucher">Generate Voucher</string>
    <string name="other_card_pan">Transfer to card PAN</string>
    <string name="title_card_to_card_transfer">Card to card transfer</string>
    <string name="card_pan_length">Sorry\' card pan must contain 16 or 19 digit</string>
    <string name="card_expiry_date_length">Sorry\' card pan expiry date must contain 4 digits</string>
    <string name="card_ipin_lengh">Sorry\' card IPIN must contain 4 digites</string>
    <string name="card_service_provider_unselected">Sorry\'please select Service Provider</string>
    <string name="phone_number_lenght">Sorry\' card number must contain 10 digits</string>
    <string name="zain">Zain</string>
    <string name="mtn">MTN</string>
    <string name="sudani">Sudani</string>
    <string name="please_wait">Please Wait …</string>
    <string name="sdg_hint"><b> SDG</b> </string>
    <string name="counter_number">Meter Number must contain 11 digits</string>
    <string name="use_one_of_saved_cards">Use saved cards</string>
    <string name="seater_numner">Seater Number</string>
    <string name="acception_type">Acception Type</string>
    <string name="the_course">The course</string>
    <string name="generate_vucher">Generate Voucher</string>
    <string name="app_name">ريتاpay</string>
    <string name="balance_inquery">Balance Inquiry</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="e15">E15</string>
    <string name="high_education">High Education</string>
    <string name="apply">Apply</string>
    <string name="electrivity">Electricity</string>
    <string name="generate_voucher">Send Voucher</string>
    <string name="purchase">Purchase</string>
    <string name="my_card">My cards</string>
    <string name="phone_number_lenght_otp">Sorry\'Phone number must contain 12 digits</string>
    <string name="enter_phone_number">Sorry\' enter phone number</string>
    <string name="enter_card_pin_confirm">Sorry Enter IPIN Confirmation</string>
    <string name="enter_otp">Sorry Enter Verification Code (OTP)</string>
    <string name="card_ipin_confirm_lengh">Sorry IPIN Confirmation must contain 4 digits</string>
    <string name="card_otp_lengh">Sorry Verification Code (OTP) must contain 4 digits</string>
    <string name="enter_other_card_pan">Enter to card pan</string>
    <string name="enter_amount">Please enter amount</string>
    <string name="transfer">Transfer</string>
    <string name="just_inquiry">Just Inquiry</string>
    <string name="invoice_length">Sorry, invoice number must contain 18 digit</string>
    <string name="enter_invoice_number">Sorry, please enter invoice number</string>
    <string name="student_name">Student name (English)</string>
    <string name="enter_meter_number">Sorry\' please enter metar number</string>
    <string name="title_e15">E15</string>
    <string name="please_use_249_to_start_phone_number">Please use 249 to start phone number</string>
    <string name="use_249_to_start_phone_number">Use 249 to start phone number</string>
    <string name="e15_phone_number_lenght">Sorry\' Please phone number must contain 12 digit</string>
    <string name="res_dae"><b>Date :</b></string>
    <string name="res_pan"><b>Card(PAN) :</b></string>
    <string name="res_message"><b>Response Message :</b></string>
    <string name="res_code"><b>Response Code :</b></string>
    <string name="res_amount"><b>Amount :</b></string>
    <string name="res_fee"><b>Issuer Fees :</b></string>
    <string name="res_last_invoice_date"><b>Last Invoice Date :</b></string>
    <string name="res_unbill_amount"><b>Unbill Amount :</b></string>
    <string name="res_billed_amount"><b>Bill Amount :</b></string>
    <string name="res_total_bill_amoun"><b>Total Bill Amount :</b></string>
    <string name="res_contract"><b>Contract Number :</b></string>
    <string name="res_phone"><b>Phone Number :</b></string>
    <string name="res_subscriber_id"><b>Subscriber ID :</b></string>
    <string name="res_bill_amount"><b>Bill Amount :</b></string>
    <string name="select_provider">Select opereter</string>
    <string name="res_to_card"><b>To Card (PAN) :</b></string>
    <string name="res_operator"><b>Operator :</b></string>
    <string name="res_voucher_number"><b>Voucher Number :</b></string>
    <string name="res_voucher_code"><b>Voucher Code :</b></string>
    <string name="res_unit_name"><b>Unit Name :</b></string>
    <string name="res_service_name"><b>Service Name :</b></string>
    <string name="res_invoice_expiry_date"><b>Invoice Expiry Date :</b></string>
    <string name="res_due_amount"><b>Due Amount :</b></string>
    <string name="res_invoice_status"><b>Invoice Status :</b></string>
    <string name="res_payer_name"><b>Payer Name :</b></string>
    <string name="res_reference_id"><b>Invoice Ref :</b></string>
    <string name="res_receipt_number"><b>ReceiptNumber :</b></string>
    <string name="res_meter_number"><b>Meter Number :</b></string>
    <string name="res_customer_name"><b>Customer  :</b></string>
    <string name="res_units"><b>Units :</b></string>
    <string name="res_token"><b>Token :</b></string>
    <string name="res_purchase_amount"><b>Purchase amount :</b></string>
    <string name="res_rittal_fee"><b>RIttal Fee :</b></string>
    <string name="sudanese_certificate">Sudanese Certificate</string>
    <string name="arab_certificate">Arab Certificate</string>
    <string name="certification_type">Certification Type</string>
    <string name="enter_seater_number">Sorry\' please enter seater number</string>
    <string name="enter_student_name">Sorry\' please enter student name</string>
    <string name="canceled_invoice">canceled</string>
    <string name="new_invoice">pending</string>
    <string name="paid_invoice">paid</string>
    <string name="user_name">User Name</string>
    <string name="user_password">Password</string>
    <string name="login">Login</string>
    <string name="confirm_user_password">Confirm password</string>
    <string name="please_enter_user_name">Please enter user name</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="user_name_or_password_was_empty">Sorry, user name or password was empty</string>
    <string name="user_name_or_password_was_incorect">Sorry, username or password is incorrect</string>
    <string name="error_in_data_processing">Sorry, Error on Data Processing</string>
    <string name="error_on_network_connection">Sorry, Error On Network Connection</string>
    <string name="title_rittal_account">My account</string>
    <string name="create_new_account">Create new account</string>
    <string name="report">Report</string>
    <string name="hint_balance_inquiry">you can inquiry about your cards balance</string>
    <string name="hint_bill_iquery">You can inquiry about SIM bill</string>
    <string name="hint_add_card">Your card data will be saved encrypted locally in the device.</string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="please_update_to_last_version">New version is available, Please update to last version</string>
    <string name="beneficiary_name">Beneficiary name</string>
    <string name="enter_beneficiary_name">Enter Beneficiary name</string>
    <string name="beneficiary_type">Beneficiary type</string>
    <string name="beneficiary_number">Beneficiary number</string>
    <string name="enter_beneficiary_number">Enter beneficiary number</string>
</resources>