<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_gravity="center"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ab000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/respons_dialog_shape"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:textColor="#585757"
                    android:text="@string/update"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#CCC"/>

                <TextView
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:textColor="#717171"
                    android:text="@string/please_update_to_last_version"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button

                    android:id="@+id/update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/update"
                    android:textColor="@color/successfully"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/exit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:text="@string/later"
                    android:textColor="@color/failer"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
